--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: relative;
+
+    width: 100%;
+    height: 100vh;
+
+    font-family: monospace;
+}
+.container {
+    width: 380px;
+    padding: 10%;
+    border-radius: 15px;
+
+    background: linear-gradient(-225deg, #20e2d7, #f9fea5);
+
+    text-align: center;
+}
+.title {
+    margin-bottom: 20px;
+
+    color: #006400;
+
+    font-size: 30px;
+    text-align: center;
+}
+.input-bar {
+    display: flex;
+    justify-content: space-between;
+    gap: 2.5%;
+
+    width: 100%;
+    padding: 0 10px;
+    margin-bottom: 20px;
+    background: #308d46;
+}
+.input-bar input {
+    flex-grow: 1;
+
+    padding: 25px 0;
+    border: none;
+    outline: none;
+
+    background: transparent;
+    color: white;
+    font-weight: bolder;
+}
+.input-bar button {
+    cursor: pointer;
+
+    border: none;
+
+    background: transparent;
+    color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.form-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    padding: 15px 0;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    font-size: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.form-item:first-child input {
+    padding: 2px 4px;
 }
+.form-item:not(:first-child) input {
+    width: 18px;
+    height: 18px;
+}
+.generate-btn{
+    width: 100%;
+    margin-top: 20px;
+    padding: 15px;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    background: #308d46;
+    color: white;
+
+    font-size: 18px;
+}
+.generate-btn:hover{
+    background: linear-gradient(-225deg, #f9fea5, #20e2d7);
+    color: #308d46;
+}
+.copy-password-btn:hover{
+    transform: scale(1.2);
+    transition: .2s;
+}
+.copy-password-btn:active{
+    transform: scale(0.8);
+    transition: .2s;
 }
